# scikit-optimize

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .pep8speaks.yml  .pylintrc  .travis.yml  .zenodo.json  1d_demo.py  AUTHORS.md  AUTHORS_scikit_optimize.md  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  ExpSineSquared Kernel gradient computation.ipynb  LICENSE  LICENSE.md  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  README_scikit_optimize.rst  RESULTS.md  Untitled.ipynb  Untitled1.ipynb  circle.yml  conftest.py  draw area.ipynb  postBuild  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_constraints.ipynb  test_constraints_ask_tell.ipynb  test_nei.py
.binder/: postBuild
.circleci/: config.yml
.cspell/: workspace_dictionary.dic
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  other.md
.github/scripts/: build_docs.sh  publish_docs.sh
.github/workflows/: ci.yml  publish.yml
ProcessOptimizer/: __init__.py  _version.py  acquisition.py  benchmarks.py  bokeh_plot.py  callbacks.py  plots.py  searchcv.py  utils.py
ProcessOptimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ProcessOptimizer/learning/: __init__.py  forest.py  gbrt.py
ProcessOptimizer/optimizer/: base.py  dummy.py  forest.py  optimizer.py
ProcessOptimizer/space/: constraints.py  space.py  transformers.py
ProcessOptimizer/tests/: pytest.ini  test_acquisition.py  test_benchmarks.py  test_callbacks.py  test_common.py  test_constraints.py  test_deprecation.py  test_dummy_opt.py  test_forest_opt.py  test_gp_opt.py  test_gpr.py  test_optimizer.py  test_parallel_cl.py  test_searchcv.py  test_space.py  test_utils.py
benchmarks/: README.md  RESULTS.md  _bench_ml_et.json  _bench_ml_gp.json  _bench_nl_gb.json  _ml_datasets.py  _ml_evaluation.py  _sk_keras.py  bench_branin.py  bench_hart6.py  bench_ml.py  bench_surrogate_logreg_withcv.py  benchmark_plotting0.ipynb  evaluation.py  fetch_mldata.py  forest_minimize.json  gbrt_minimize.json  gp_minimize.json  logreg_on_mnist.py  make_ec2_cluster.py  requirements.txt  run_all.py
benchmarks/data/: .gitignore
benchmarks/tracks/: __init__.py  classic.py  ml.py
bokeh-ploting/: app1.py  create_result_for_plot.py  data.pickle  hej.py  myapp.py  objective_app.py  objective_app_test.py  result_cat.pickle  stocks.py  utils.py
build_tools/circle/: build_doc.sh  build_test_pypy.sh  checkout_merge_commit.sh  deploy.sh  execute.sh  install.sh  linting.sh  list_versions.py  list_versions.sh  push_doc.sh
build_tools/travis/: deploy.sh  install.sh  make_doc.py  test_docs.sh  test_script.sh
ci_scripts/: deploy.sh  install.sh  test.sh
ci_scripts/templates/: css.mako  html.mako
doc/: Makefile  conf.py  conftest.py  contents.rst  development.rst  getting_started.rst  index.rst  install.rst  make.bat  preface.rst  requirements.txt  user_guide.rst  whats_new.rst
doc/modules/: acquisition.rst  bayessearchcv.rst  benchmarks.rst  callbacks.rst  classes.rst  index.rst  learning.rst  minimize_functions.rst  optimizer.rst  plots.rst  sampler.rst  samples.rst  space.rst  transformers.rst  utils.rst
doc/templates/: documentation.html  index.html
doc/whats_new/: _contributors.rst  v0.1.rst  v0.2.rst  v0.3.rst  v0.4.rst  v0.5.rst  v0.6.rst  v0.7.1.rst  v0.7.2.rst  v0.7.3.rst  v0.7.rst  v0.8.rst  v0.9.rst
docs/: Makefile  conf.py  index.rst  intro.rst  make.bat  requirements.txt
docs/_static/: custom.css
docs/api/: classes.rst  index.rst  minimize_functions.rst  optimizer.rst  plots.rst  space.rst  sub_modules.rst  utils.rst
docs/examples/: parallel-optimization.ipynb  sklearn-gridsearchcv-replacement.ipynb  store-and-load-results.ipynb  strategy-comparison.ipynb  visualizing-results.ipynb
docs/narrative/: examples.rst  index.rst  intro.rst
docs/source/: conf.py  development.rst  index.rst  installation.rst
examples/: .flake8  Bayesian optimisation.ipynb  Exploration vs exploitation.ipynb  Latin hypercube sampling.ipynb  Length scale bounds.ipynb  ProccesOptimize_examples.ipynb  ProccesOptimize_examples_categorical_values.ipynb  ProccesOptimize_examples_categorical_values_2.ipynb  ProccesOptimize_examples_test_expected_minimum.ipynb  README.txt  SMBO-visualization.ipynb  Test_categorical_for_expected_minimum.ipynb  ask-and-tell.ipynb  ask-and-tell.py  bayesian-optimisation.ipynb  bayesian-optimization.ipynb  bayesian-optimization.py  categorical ploting.ipynb  constant_liar.py  constant_liar_test.py  constraints.ipynb  exploration-vs-exploitation.py  hyperopt-comparison.py  hyperparameter-optimisation.ipynb  hyperparameter-optimization.ipynb  hyperparameter-optimization.py  initial-sampling-method-integer.py  interruptible-optimization.ipynb  interruptible-optimization.py  load_boston.py  optimizer-bcv-initial-points.ipynb  optimizer-with-different-base-estimator.py  parallel-optimization.ipynb  parallel-optimization.py  partial-dependence-plot.py  pipeline-optimize.ipynb  plot_1d_demo.py  plot_branin.py  plot_branin_acquisition.py  plot_comparison.py  (+23 more)
examples/.ipynb_checkpoints/: ProccesOptimize_examples-checkpoint.ipynb  visualizing-results-checkpoint.ipynb
examples/plots/: partial-dependence-plot-2D.py  partial-dependence-plot-with-categorical.py  partial-dependence-plot.py  visualizing-results.py
examples/sampler/: README.txt  initial-sampling-method-integer.py  initial-sampling-method.py  sampling_comparison.py
examples/samples/: README.txt  (+3 more)
paper/: paper.bib  paper.md
plot_test/: bokeh_categorical.py  bokeh_numerical.py  plot_objective.ipynb  plot_objective_categorical_values.ipynb
report/: report_test_results.txt  requirements-dev.txt
scikit-optimize/: __init__.py
skopt/: __init__.py  _version.py  acquisition.py  ask.py  benchmarks.py  bokeh_plot.py  callbacks.py  dummy_opt.py  dummy_search.py  forest_opt.py  gbrt_opt.py  gbt.py  gp_opt.py  parameter.py  parameters.py  plots.py  sample.py  searchcv.py  space.py  transformers.py  tree_opt.py  trees.py  utils.py
tmp/: prior_optimization.py  results.json
(+145 files in other folders)
