[metadata]
name = scikit-optimize
version = attr: skopt.__version__
author = The scikit-optimize contributors
license = BSD 3-clause
description = Sequential model-based optimization toolbox.
url = https://scikit-optimize.github.io/
long_description = file: README.rst
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source Code = https://github.com/scikit-optimize/scikit-optimize
    Bug Tracker = https://github.com/scikit-optimize/scikit-optimize/issues

[options]
packages =
    skopt
    skopt.learning
    skopt.optimizer
    skopt.space
    skopt.learning.gaussian_process
    skopt.sampler
install_requires =
    joblib>=0.11
    pyaml>=16.9
    numpy>=1.13.3
    scipy>=0.19.1
    scikit-learn>=0.20.0

[options.extras_require]
plots = matplotlib>=2.0.0

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
addopts =
    --ignore build_tools
    --ignore benchmarks
    --ignore doc
    --ignore examples
    --ignore maint_tools
    --doctest-modules
    --disable-pytest-warnings
    -rxXs

filterwarnings =
    ignore:the matrix subclass:PendingDeprecationWarning

markers =
    fast_test: marks tests as fast (deselect with '-m "not fast_test"')
    slow_test: marks tests as slow (deselect with '-m "not slow_test"')
    slow: marks tests as slow (deselect with '-m "not slow"')
    serial

# used by our travis auto-deployment system
# needs changing if scikit-optimize ever stops being
# a pure python module
[bdist_wheel]
universal = 1

[coverage:run]
omit = */tests/*

[flake8]
# Default flake8 3.5 ignored flags
ignore=E121,E123,E126,E226,E24,E704,W503,W504
